<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenuActivity" tools:layout_editor_absoluteY="25dp">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/game_title"
              android:fontFamily="@font/aclonica"
              android:textSize="@dimen/menu_game_title"
              android:textColor="#000"
              android:layout_marginBottom="@dimen/double_margin"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
    />


    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/buttonsLayout"
                  app:layout_constraintVertical_bias="0.8"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent">

        <Button
                style="@style/MenuButtonStyle"
                android:text="@string/play"
                android:id="@+id/playButton"/>

        <Button
                style="@style/MenuButtonStyle"
                android:text="@string/rules"
                android:id="@+id/rulesButton"/>

        <Button
                style="@style/MenuButtonStyle"
                android:text="@string/exit"
                android:id="@+id/exitButton"/>
    </LinearLayout>


    <ImageButton
            style="@style/ImageMenuButtonStyle"
            app:srcCompat="@drawable/ic_settings"
            android:id="@+id/settingsButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageButton
            style="@style/ImageMenuButtonStyle"
            app:srcCompat="@drawable/ic_info"
            android:id="@+id/infoButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>