<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/TitleText"
              android:id="@+id/title"
              android:layout_marginBottom="@dimen/double_margin"
              android:text="@string/title_settings"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toTopOf="@id/settingsArea"
    />

    <android.support.constraint.ConstraintLayout android:layout_width="@dimen/settings_area_width"
                                                 android:layout_height="@dimen/settings_area_height"
                                                 app:layout_constraintLeft_toLeftOf="parent"
                                                 app:layout_constraintRight_toRightOf="parent"
                                                 app:layout_constraintBottom_toBottomOf="parent"
                                                 app:layout_constraintTop_toTopOf="parent"
                                                 android:background="@drawable/rounded_corners"
                                                 android:id="@+id/settingsArea"
    >

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/title_effects"
                  android:fontFamily="@font/aclonica"
                  android:textColor="#000"
                  android:textSize="@dimen/settings_text_size"
                  android:layout_marginBottom="@dimen/default_margin"
                  android:background="@color/colorMenuButton"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/effectsBar"
        />

        <ImageButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/ImageMenuButtonStyle"
                     android:id="@+id/effectsMinus"
                     app:srcCompat="@drawable/ic_minus"
                     app:layout_constraintVertical_bias="0.3"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
        />

        <ImageButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/ImageMenuButtonStyle"
                     android:id="@+id/effectsPlus"
                     app:srcCompat="@drawable/ic_plus"
                     app:layout_constraintVertical_bias="0.3"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
        />

        <SeekBar android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/effectsBar"
                 app:layout_constraintBottom_toBottomOf="@id/effectsMinus"
                 app:layout_constraintLeft_toRightOf="@id/effectsMinus"
                 app:layout_constraintRight_toLeftOf="@id/effectsPlus"
        />


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/title_music"
                  android:fontFamily="@font/aclonica"
                  android:textColor="#000"
                  android:textSize="@dimen/settings_text_size"
                  android:background="@color/colorMenuButton"
                  android:layout_marginBottom="@dimen/default_margin"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/musicBar"
        />


        <ImageButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/ImageMenuButtonStyle"
                     app:srcCompat="@drawable/ic_minus"
                     android:id="@+id/musicMinus"
                     app:layout_constraintVertical_bias="0.9"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
        />

        <ImageButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/ImageMenuButtonStyle"
                     app:srcCompat="@drawable/ic_plus"
                     android:id="@+id/musicPlus"
                     app:layout_constraintVertical_bias="0.9"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
        />

        <SeekBar android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/musicBar"
                 app:layout_constraintBottom_toBottomOf="@id/musicMinus"
                 app:layout_constraintLeft_toRightOf="@id/musicMinus"
                 app:layout_constraintRight_toLeftOf="@id/musicPlus"
        />

    </android.support.constraint.ConstraintLayout>


    <Button style="@style/MenuButtonStyle"
            android:text="@string/back"
            android:id="@+id/backButton"
            app:layout_constraintTop_toBottomOf="@id/settingsArea"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.8"
    />
</android.support.constraint.ConstraintLayout>