<resources>
    <string name="app_name">Carcassonne Custom Clone</string>
    <string name="game_title">Carcassonne</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="title_rules">Rules</string>
    <string name="title_info">About</string>
    <string name="title_players">Choose players</string>
    <string name="title_settings">Settings</string>
    <string name="title_effects">Effects</string>
    <string name="title_music">Music</string>
    <string name="title_pause">Pause</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_question">Do you really want to exit?</string>
    <string name="name_change">Enter the new name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="resume">Resume</string>
    <string name="exit_to_menu">Exit to menu</string>
...
