<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:padding="20dp"
                                             android:background="@drawable/modal_dialog"
>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/TitleText"
              android:maxLines="1"
              android:id="@+id/questionText"
              android:text="@string/exit_question"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
    />

    <Button style="@style/MenuButtonStyle"
            android:text="@string/no"
            android:id="@+id/noButton"
            app:layout_constraintTop_toBottomOf="@id/questionText"
            app:layout_constraintLeft_toLeftOf="parent"
    />

    <Button style="@style/MenuButtonStyle"
            android:text="@string/yes"
            android:id="@+id/yesButton"
            app:layout_constraintTop_toBottomOf="@id/questionText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/noButton"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginStart="@dimen/dialog_button_margin"
    />

</android.support.constraint.ConstraintLayout>